--- a/backend/wrangler.toml
+++ b/backend/wrangler.toml
@@ -12,6 +12,10 @@ binding = "DB"
 database_name = "ssreports-db"
 database_id = "8312a7c3-1334-46a9-b980-7dd8ce6392ca"
 
+[[r2_buckets]]
+binding = "PHOTOS"
+bucket_name = "ssreports-photos"
+
 [env.production]
 routes = [
   { pattern = "ss.vantax.co.za/api/*", zone_name = "vantax.co.za" }
